--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,9 @@ form {
   padding: 0px;
 }
 
+.data {
+  width: 100%;
+}
 .btnCreate {
   padding: 10px 15px;
   background-image: linear-gradient(
