--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 main {
   background-image: linear-gradient(
     109.6deg,
-    rgba(62, 161, 219, 1) 11.2%,
+    rgb(37, 41, 44) 11.2%,
     rgba(93, 52, 236, 1) 100.2%
   );
   width: 100vw;
